# codenet

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CHANGELOG.md  Makefile  alembic.ini  cz.yaml  docker-compose.yaml  docker-compose.yml  mypy.ini  prueba_pytest.py  pyproject.toml  pytest.ini
.github/actions/python_setup/: action.yml
.github/workflows/: app.yml  bumpversion.yml  ci.yml  linttest.yml
docs/architecture/: criteria-pattern.md
docs/design_docs/: 0001-design-docs-system.md  0002-typed-value-support-criteria.md  0003-criteria-sorting-support.md  0004-criteria-pagination-support.md  README.md  design-doc-guidelines.md
docs/templates/design_docs/: feature_template.md
envs/: .env.local
http/: user_remove.http  user_search.http  users_signup.http
migrations/: env.py  models_metadata.py
migrations/versions/: 2025_02_18_0817-998d15dc6b7e_create_users_table.py  2025_09_30_0749-68d3359b7845_convert_user_id_to_string.py  2026_01_27_1754-bec5eeb095a0_.py  2026_01_27_1754-bec5eeb095a0_add_password_column_to_users_table.py  2026_02_08_0016-e5fcd6d2d9ff_create_accounts_table.py  2026_02_08_0109-8346c8e07917_add_account_relationship_to_users.py  2026_02_10_1712-0acac366fe2f_create_domain_events_to_consume_table.py
scripts/: add-dependency.sh  create_aggregate.py  insert_template.py
scripts/templates/: aggregate_root_template.py
scripts/templates/events/: domain_event_json_deserializer_template.py  domain_event_json_serializer_template.py  domain_event_subscriber_template.py  domain_event_template.py  event_bus_template.py  exchange_type_template.py  rabbit_mq_configurer_template.py  rabbit_mq_connection_template.py  rabbit_mq_consumer_template.py  rabbit_mq_event_bus_template.py  rabbit_mq_queue_formatter_template.py  rabbit_mq_settings_template.py
scripts/templates/exceptions/: incorrect_value_error_template.py  invalid_negative_value_error_template.py  required_value_error_template.py
scripts/templates/value_objects/: int_value_object_template.py  string_value_object_template.py  uuid_template.py  value_object_template.py
scripts/tests/: integration.sh  unit.sh
src/app/: main.py
src/app/handlers/: error_handlers.py
src/auth/: routes.py
src/auth/account/delivery/: deps.py  routes.py
src/auth/account/domain/: account.py  account_created_at.py  account_email.py  account_email_already_exists.py  account_id.py  account_password_hash.py  account_repository.py  account_status.py  account_username.py  account_username_already_exists.py  accounts.py  password_manager.py  token_issuer.py
src/auth/account/infra/: argon_password_manager.py  authentication_token.py  jwt_token_issuer.py
src/auth/session/delivery/: routes.py
src/auth/session/domain/: account_auth_credentials.py  account_by_login_identifier_criteria.py  account_credentials_finder.py  login_identifier.py
src/auth/session/infra/: __init__.py  jwt_token_issuer.py
src/auth/shared/domain/: password_manager.py
src/auth/shared/infra/: argon_password_manager.py
src/backoffice/: routes.py
src/backoffice/user/delivery/: deps.py  routes.py
src/backoffice/user/domain/: user.py  user_id.py  user_name.py  user_repository.py  user_username.py
src/delivery/: alembic_migrator.py  main.py
src/delivery/api/: alembic_migrator.py  main.py
src/delivery/api/user/: user_register_request.py  user_route.py
src/delivery/handlers/: error_handlers.py
src/delivery/middleware/: fast_api_log_middleware.py
src/delivery/routers/: fastapi_response.py
src/delivery/routers/auth/: routes.py
src/delivery/routers/social/: routes.py
src/delivery/routers/user/: deps.py  removal_user_router.py  routes.py  search_user_router.py  signup_user_router.py  user_sign_up_request.py
src/shared/delivery/: api_parameter.py  db_session.py  fastapi_response.py  path_parameter.py  settings.py
src/shared/domain/: uuid_generator.py
src/shared/domain/criteria/: comparator_condition.py  comparison.py  criteria.py  criteria_error.py  expression.py  field.py  filter.py  filter_expression.py  filter_field.py  filter_operator.py  filter_value.py  filters.py  invalid_criteria.py  logical_group.py  nested_logical_condition.py  operator.py  sort_direction.py  sorts.py
src/shared/domain/event_bus/: domain_event.py  event_bus.py
src/shared/domain/exceptions/: application_error.py  base_error.py  domain_error.py  domain_validation_error.py  incorrect_value_type_error.py  invalid_id_format_error.py  invalid_negative_value_error.py  required_value_error.py
src/shared/domain/value_objects/: aggregate.py  int_value_object.py  optional.py  string_value_object.py  uuid.py  validation.py  value_object.py
src/shared/infra/: HttpResponse.py  datetime_clock.py  native_uuid_generator.py  settings.py
src/shared/infra/api/: error_response.py  success_response.py
src/shared/infra/criteria/: condition_strategies.py  condition_to_sql_query_converter.py  condition_to_sql_query_strategy.py  criteria_to_sql_alchemy_converter.py  criteria_to_sqlalchemy_converter.py  expression_to_sql_converter.py  filter_expression_to_sql_strategy.py  operator_to_sql_translate_strategy.py  operator_to_sql_translator.py  sorts_to_sql_converter.py
src/shared/infra/event_bus/: domain_event_to_consume_model.py  postgres_event_bus.py
src/shared/infra/http/: HttpResponse.py  error_response.py  http_response.py  response.py  success_response.py
src/shared/infra/injector/: database_session_provider.py  databse_session_provider.py  registry.py
src/shared/infra/log/: logger.py
src/shared/infra/logger/: fastapi_file_logger.py  file_rotating_handler.py  json_formatter.py
src/social/: routes.py
src/social/user/delivery/: deps.py  routes.py
src/social/user/domain/: user.py  user_email.py  (+8 more)
tests/: conftest.py
tests/auth/account/: account_fixtures.py
tests/backoffice/user/: user_fixtures.py
tests/delivery/api/: acceptance_test_config.py
tests/shared/delivery/: fastapi_fixtures.py
tests/shared/domain/: random_generator.py
tests/shared/expects/: async_stub.py  matchers.py
tests/shared/infra/: database_fixtures.py  mock_clock.py
(+304 files in other folders)
